# zynerone

./: .env  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  README.md  SECURITY.md  create_cold_standby.sh  docker-compose.yml  generate_config.sh  markdown.md  test  update.sh
data/Dockerfiles/api/: .env  .gitignore  Cargo.nix  Cargo.toml  Dockerfile  Rocket.toml  flake.nix
data/Dockerfiles/api/migrations/2023-10-14-192008_create_table_versions/: down.sql  up.sql
data/Dockerfiles/api/migrations/2023-10-14-193801_create_table_admin/: down.sql  up.sql
data/Dockerfiles/api/migrations/2023-10-14-194908_create_table_fido2/: down.sql  up.sql
data/Dockerfiles/api/migrations/2023-10-14-200157_create_table_sogo_static_view/: up.sql
data/Dockerfiles/api/migrations/2023-10-15-115220_create_table__sogo_static_view/: down.sql  up.sql
data/Dockerfiles/api/migrations/2023-10-15-115251_create_table_admin/: down.sql  up.sql
data/Dockerfiles/api/migrations/2023-10-15-115335_create_table_alias_domain/: down.sql  up.sql
data/Dockerfiles/api/migrations/2023-10-15-115410_create_table_alias/: down.sql  up.sql
data/Dockerfiles/api/migrations/2023-10-15-115424_create_table_api/: down.sql  up.sql
data/Dockerfiles/api/migrations/2023-10-15-115449_create_table_app_passwd/: down.sql  up.sql
data/Dockerfiles/api/migrations/2023-10-15-115459_create_table_bcc_maps/: down.sql  up.sql
data/Dockerfiles/api/migrations/2023-10-15-115511_create_table_da_acl/: down.sql  up.sql
data/Dockerfiles/api/src/: macros.rs  main.rs  schema.rs  structs.rs
data/Dockerfiles/api/src/routes/: mod.rs
(+430 files in other folders)
