[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
hyperlocal = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = "0.14.27"
anyhow = "1.0.75"
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
reqwest = "0.11.22"

[[bin]]
name = "api"
path = "src/main.rs"
